--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+/*Style global*/
+
+*{
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: unset !important;
+}
+
+::-webkit-scrollbar {
+    background: #B8CFDE;
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #0B6AC9;
+    border-radius: 15px;
+}
+
+::selection {
+    color: #000;
+    background: #EDF4D7;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/*Condition tag*/
+
+body{
+    &.menu-open{
+        overflow: hidden;
+    }
+}
