Hover header button.

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -408,6 +408,10 @@
                                     font-style: normal;
                                     font-weight: 500;
                                     line-height: 24px;
+                                    transition: color;
+                                    &:hover{
+                                        color: #F4D329;
+                                    }
                                 }
                             }
                         }
