--- a/src/app/pages/calculate/calculate.component.html
+++ b/src/app/pages/calculate/calculate.component.html
@@ -1,1 +1,53 @@
-<p>calculate works!</p>
+<div class="calculate">
+    <div class="calculator">
+        <img src="/assets/images/logoblue.svg" alt="Graphics logo.">
+        <h1>Calcule aqui seu investimento em Energia Solar.</h1>
+        <div class="calc">
+            <div>
+                <h1>Está pronto para<br> economizar?</h1>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 18 17" fill="none">
+                        <g clip-path="url(#clip0_513_638)">
+                          <path d="M11.7257 2.21436H13.4982C13.8116 2.21436 14.1122 2.33476 14.3338 2.54909C14.5554 2.76342 14.6799 3.05411 14.6799 3.35721V14.7858C14.6799 15.0889 14.5554 15.3796 14.3338 15.5939C14.1122 15.8082 13.8116 15.9286 13.4982 15.9286H4.04494C3.73154 15.9286 3.43098 15.8082 3.20938 15.5939C2.98778 15.3796 2.86328 15.0889 2.86328 14.7858V3.35721C2.86328 3.05411 2.98778 2.76342 3.20938 2.54909C3.43098 2.33476 3.73154 2.21436 4.04494 2.21436H5.81743" stroke="#0B6AC9" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M10.544 1.07129H6.99904C6.34643 1.07129 5.81738 1.58296 5.81738 2.21415V2.78557C5.81738 3.41676 6.34643 3.92843 6.99904 3.92843H10.544C11.1966 3.92843 11.7257 3.41676 11.7257 2.78557V2.21415C11.7257 1.58296 11.1966 1.07129 10.544 1.07129Z" stroke="#0B6AC9" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M5.81738 6.78564H11.7257M5.81738 9.64279H11.7257M5.81738 12.4999H11.7257" stroke="#0B6AC9" stroke-linecap="round" stroke-linejoin="round"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_513_638">
+                            <rect width="16.5432" height="16" fill="white" transform="translate(0.5 0.5)"/>
+                          </clipPath>
+                        </defs>
+                      </svg>
+                      <p>Preencha a nossa calculadora abaixo.</p>
+                </div>
+                <ng-container>
+                    <form class="calc1" action="">
+                        <label for="" class="select">
+                            <p>*Selecione o tipo de instalação</p>
+                            <input type="text" value="Residencial">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                                <path d="M11.7337 2.91648L2.14923 2.91648C2.0522 2.91682 1.95708 2.94614 1.87412 3.00129C1.79116 3.05644 1.7235 3.13533 1.67843 3.22947C1.63335 3.32361 1.61256 3.42944 1.61831 3.53556C1.62405 3.64169 1.6561 3.74408 1.71101 3.83173L6.50325 11.4151C6.70186 11.7295 7.18002 11.7295 7.37916 11.4151L12.1714 3.83173C12.2269 3.74427 12.2594 3.64182 12.2654 3.53552C12.2715 3.42922 12.2508 3.32314 12.2057 3.2288C12.1606 3.13445 12.0928 3.05546 12.0095 3.0004C11.9263 2.94534 11.8309 2.91632 11.7337 2.91648Z" fill="white"/>
+                            </svg>
+                        </label>
+                        <label for="" class="select">
+                            <p>*Selecione seu município</p>
+                            <input type="text" value="Rio de Janeiro">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                                <path d="M11.7337 2.91648L2.14923 2.91648C2.0522 2.91682 1.95708 2.94614 1.87412 3.00129C1.79116 3.05644 1.7235 3.13533 1.67843 3.22947C1.63335 3.32361 1.61256 3.42944 1.61831 3.53556C1.62405 3.64169 1.6561 3.74408 1.71101 3.83173L6.50325 11.4151C6.70186 11.7295 7.18002 11.7295 7.37916 11.4151L12.1714 3.83173C12.2269 3.74427 12.2594 3.64182 12.2654 3.53552C12.2715 3.42922 12.2508 3.32314 12.2057 3.2288C12.1606 3.13445 12.0928 3.05546 12.0095 3.0004C11.9263 2.94534 11.8309 2.91632 11.7337 2.91648Z" fill="white"/>
+                            </svg>
+                        </label>
+                        <label for="" class="type">
+                            <p>*Insira o valor da sua fatura mais alta (últimos 12 meses)</p>
+                            <input type="text" value="0">
+                            <p>R$</p>
+                        </label>
+                        <label class="submit">
+                            <input type="button" value="Continuar">
+                        </label>
+                    </form>
+                </ng-container>
+            </div>
+        </div>
+    </div>
+    <div class="gradient"></div>
+</div>
