--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -4,27 +4,39 @@
         z-index: 9;
     }
     .menu{
-        width: 58px;
-        min-width: 58px;
-        height: 37px;
-        min-height: 37px;
+        width: 42px;
+        min-width: 42px;
+        height: 30px;
+        min-height: 30px;
         fill: #FFF;
         position: absolute;
-        top: 48px;
-        left: 52px;
+        top: 43px;
+        left: 35px;
         z-index: 9;
         transition: fill .2s;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        row-gap: 5px;
+        padding: 5px;
         &:hover{
-            fill: #F4D329;
+            section:last-child{
+                width: 100%;
+            }
         }
-        rect{
-            width: 58px;
+        section{
+            width: 100%;
+            height: 3.1px;
+            border-radius: 13.6px;
+            background: #FFF;
+            transition: width .2s;
             &:last-child{
-                width: 42px !important;
+                width: 14px;
             }
         }
         &-mobile{
             height: 100vh;
+            display: flex;
             align-items: start;
             flex-direction: column;
             position: fixed;
@@ -64,7 +76,7 @@
                 min-width: 131px;
                 height: 106px;
                 min-height: 106px;
-                margin: 0 0 75px 0;
+                margin: 0 0 85px 0;
             }
             nav{
                 display: flex;
@@ -178,8 +190,22 @@
             display: none;
         }
         .menu{
-            top: 56px;
+            top: 73px;
             left: 70px;
+            width: 68px;
+            min-width: 68px;
+            height: 56px;
+            min-height: 56px;
+            padding: 8px;
+            gap: 8px;
+            section{
+                width: 100%;
+                height: 5px;
+                border-radius: 22px;
+                &:last-child{
+                    width: 22px;
+                }
+            }
             &-mobile{
                 flex-direction: column;
                 justify-content: unset;
@@ -195,7 +221,7 @@
                     min-width: 131px;
                     height: 106px;
                     min-height: 106px;
-                    margin: 0 0 110px 0;
+                    margin: 0 0 100px 0;
                 }
                 button{
                     padding: 30px 40px;
@@ -211,6 +237,33 @@
                         min-width: 48px;
                         height: 48px;
                         min-height: 48px;
+                    }
+                }
+                div{
+                    column-gap: 40px;
+                    a:nth-child(1){
+                        svg{
+                            width: 25px;
+                            min-width: 25px;
+                            height: 34px;
+                            min-height: 34px;
+                        }
+                    }
+                    a:nth-child(2){
+                        svg{
+                            width: 39px;
+                            min-width: 39px;
+                            height: 39px;
+                            min-height: 39px;
+                        }
+                    }
+                    a:nth-child(3){
+                        svg{
+                            width: 51px;
+                            min-width: 51px;
+                            height: 51px;
+                            min-height: 51px;
+                        }
                     }
                 }
             }
@@ -232,13 +285,16 @@
             left: 0;
             right: 0;
             margin: 0 auto;
-            img{
+            svg{
                 display: flex;
                 margin: 0;
                 width: 128px;
                 min-width: 128px;
                 height: 104px;
                 min-height: 104px;
+                .letter{
+                    fill: #FFF;
+                }
             }
             nav{
                 max-width: 616px;
@@ -266,44 +322,83 @@
                     }
                 }
             }
-            button{
-                max-width: 253px;
-                max-height: 62px;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                column-gap: 8px;
-                padding: 15px 20px;
-                border-radius: 10px;
-                border: none;
-                background: linear-gradient(180deg, #FCEE21 -30.65%, #FFA800 158.06%);
-                color: #1C3955;
-                font-family: 'Work Sans', sans-serif;
-                font-size: 16px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: 32px;
-                cursor: pointer;
-                transition: transform .3s linear;
-                &:hover{
-                    transform: scale(1.03);
-                }
-                svg{
-                    width: 32px;
-                    min-width: 32px;
-                    height: 32px;
-                    min-height: 32px;
-                    transition: all .2s;
+            .buttons{
+                max-width: unset;
+                width: unset;
+                button{
+                    &:nth-child(1){
+                        min-width: 253px;
+                        min-height: 62px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        column-gap: 8px;
+                        padding: 15px 20px;
+                        border-radius: 10px;
+                        border: none;
+                        background: linear-gradient(180deg, #FCEE21 -30.65%, #FFA800 158.06%);
+                        color: #1C3955;
+                        font-family: 'Work Sans', sans-serif;
+                        font-size: 16px;
+                        font-style: normal;
+                        font-weight: 600;
+                        line-height: 32px;
+                        cursor: pointer;
+                        transition: transform .3s linear;
+                        &:hover{
+                            transform: scale(1.03);
+                        }
+                        svg{
+                            width: 32px;
+                            min-width: 32px;
+                            height: 32px;
+                            min-height: 32px;
+                            transition: all .2s;
+                        }
+                    }
+                    &:nth-child(2){
+                        display: none;
+                        min-width: 253px;
+                        min-height: 62px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        column-gap: 8px;
+                        padding: 15px 20px;
+                        border-radius: 10px;
+                        background: linear-gradient(180deg, #0B6AC9 0%, #004992 100%);
+                        border: none;
+                        color: #FFF;
+                        font-family: 'Work Sans', sans-serif;
+                        font-size: 16px;
+                        font-style: normal;
+                        font-weight: 600;
+                        line-height: 32px;
+                        cursor: pointer;
+                        transition: transform .3s linear;
+                        &:hover{
+                            transform: scale(1.03);
+                        }
+                        svg{
+                            width: 32px;
+                            min-width: 32px;
+                            height: 32px;
+                            min-height: 32px;
+                            transition: all .2s;
+                        }
+                    }
                 }
             }
             div{
-                max-width: 125px;
+                max-width: 100px;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: space-between;
                 margin: 0;
                 a{
+                    width: unset;
+                    display: flex;
                     text-decoration: none;
                     cursor: pointer;
                     svg{
@@ -313,6 +408,30 @@
                     &:hover{
                         svg{
                             fill: #FFF;
+                        }
+                    }
+                    &:nth-child(1){
+                        svg{
+                            width: 13px;
+                            min-width: 13px;
+                            height: 18px;
+                            min-height: 18px;
+                        }
+                    }
+                    &:nth-child(2){
+                        svg{
+                            width: 20px;
+                            min-width: 20px;
+                            height: 20px;
+                            min-height: 20px;
+                        }
+                    }
+                    &:nth-child(3){
+                        svg{
+                            width: 26px;
+                            min-width: 26px;
+                            height: 26px;
+                            min-height: 26px;
                         }
                     }
                 }
