--- a/src/app/pages/calculate/calculate.component.scss
+++ b/src/app/pages/calculate/calculate.component.scss
@@ -78,18 +78,116 @@
                     }
                 }
                 form{
-                    label{
+                    section{
                         display: flex;
                         flex-direction: column;
                         align-items: start;
                         row-gap: 8px;
-                        p{
+                        label{
+                            width: unset;
                             color: #1C3955;
                             font-family: 'Work Sans', sans-serif;
                             font-size: 12px;
                             font-style: normal;
                             font-weight: 400;
                             line-height: 16px;
+                            margin: 0;
+                        }   
+                        &.select{
+                            position: relative;
+                            input{
+                                min-height: 56px;
+                                border-radius: 10px;
+                                background: #096CC7;
+                                border: none;
+                                padding: 15px 26px;
+                                color: #FFF;
+                                font-family: 'Work Sans', sans-serif;
+                                font-size: 16px;
+                                font-style: normal;
+                                font-weight: 500;
+                                line-height: 24px;
+                                cursor: pointer ;
+                                &:read-only{
+                                    &::placeholder{
+                                        color: #FFF;
+                                        font-family: 'Work Sans', sans-serif;
+                                        font-size: 16px;
+                                        font-style: normal;
+                                        font-weight: 500;
+                                        line-height: 24px;  
+                                    }
+                                }
+                                &:focus{
+                                    outline: none;
+                                    border: none;
+                                    box-shadow: none;
+                                    & ~ svg{
+                                        rotate: 180deg;
+                                    }
+                                }
+                                & ~ svg{
+                                    position: absolute;
+                                    width: 12px;
+                                    min-width: 12px;
+                                    height: 14px;
+                                    min-height: 14px;
+                                    top: 45px;
+                                    right: 19px;
+                                    transition: all .2s;
+                                }
+                            }
+                        }
+                        &.type{
+                            position: relative;
+                            input{
+                                border: none;
+                                min-height: 56px;
+                                border-radius: 10px;
+                                background: #EFEFEF;
+                                color: #1C3955;
+                                font-family: 'Work Sans', sans-serif;
+                                font-size: 24px;
+                                font-style: normal;
+                                font-weight: 600;
+                                line-height: 24px;
+                                padding: 15px 15px 15px 56px;
+                                &:focus{
+                                    outline: none;
+                                    border: none;
+                                    box-shadow: none;
+                                }
+                                & ~ p{
+                                    width: unset;
+                                    color: #1C3955;
+                                    font-family: 'Work Sans', sans-serif;
+                                    font-size: 24px;
+                                    font-style: normal;
+                                    font-weight: 600;
+                                    line-height: 24px;
+                                    position: absolute;
+                                    top: 41px;
+                                    left: 22px;
+                                }
+                            }
+                        }
+                        &.submit{
+                            input{
+                                min-height: 62px;
+                                border: none;
+                                border-radius: 10px;
+                                background: linear-gradient(180deg, #0B6AC9 0%, #004992 100%);
+                                color: #FFF;
+                                font-family: 'Work Sans', sans-serif;
+                                font-size: 16px;
+                                font-style: normal;
+                                font-weight: 600;
+                                line-height: 24px;
+                                transition: transform .3s linear;
+                                &:hover{
+                                    transform: scale(1.03);
+                                }
+                            }
                         }
                     }
                     &.calc1{
@@ -97,89 +195,6 @@
                         flex-direction: column;
                         align-items: center;
                         row-gap: 15px;
-                        label{
-                            &.select{
-                                position: relative;
-                                input{
-                                    min-height: 56px;
-                                    border-radius: 10px;
-                                    background: #096CC7;
-                                    border: none;
-                                    padding: 15px 26px;
-                                    color: #FFF;
-                                    font-family: 'Work Sans', sans-serif;
-                                    font-size: 16px;
-                                    font-style: normal;
-                                    font-weight: 500;
-                                    line-height: 24px;
-                                    &:focus{
-                                        outline: none;
-                                        border: none;
-                                        box-shadow: none;
-                                        & ~ svg{
-                                            rotate: 180deg;
-                                        }
-                                    }
-                                    & ~ svg{
-                                        position: absolute;
-                                        width: 12px;
-                                        min-width: 12px;
-                                        height: 14px;
-                                        min-height: 14px;
-                                        top: 45px;
-                                        right: 19px;
-                                        transition: all .2s;
-                                    }
-                                }
-                            }
-                            &.type{
-                                position: relative;
-                                input{
-                                    border: none;
-                                    min-height: 56px;
-                                    border-radius: 10px;
-                                    background: #EFEFEF;
-                                    color: #1C3955;
-                                    font-family: 'Work Sans', sans-serif;
-                                    font-size: 24px;
-                                    font-style: normal;
-                                    font-weight: 600;
-                                    line-height: 24px;
-                                    padding: 15px 15px 15px 56px;
-                                    &:focus{
-                                        outline: none;
-                                        border: none;
-                                        box-shadow: none;
-                                    }
-                                    & ~ p{
-                                        width: unset;
-                                        color: #1C3955;
-                                        font-family: 'Work Sans', sans-serif;
-                                        font-size: 24px;
-                                        font-style: normal;
-                                        font-weight: 600;
-                                        line-height: 24px;
-                                        position: absolute;
-                                        top: 41px;
-                                        left: 22px;
-                                    }
-                                }
-                            }
-                            &.submit{
-                                input{
-                                    min-height: 62px;
-                                    border: none;
-                                    border-radius: 10px;
-                                    background: linear-gradient(180deg, #0B6AC9 0%, #004992 100%);
-                                    color: #FFF;
-                                    font-family: 'Work Sans', sans-serif;
-                                    font-size: 16px;
-                                    font-style: normal;
-                                    font-weight: 600;
-                                    line-height: 24px;
-                                }
-                            }
-                        }
                     }
                 }
             }
