--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -302,6 +302,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
+                    margin: 0;
                     li{
                         width: unset;
                         list-style: none;
@@ -331,7 +332,7 @@
                         min-height: 62px;
                         display: flex;
                         align-items: center;
-                        justify-content: space-between;
+                        justify-content: center;
                         column-gap: 8px;
                         padding: 15px 20px;
                         border-radius: 10px;
@@ -362,7 +363,7 @@
                         min-height: 62px;
                         display: flex;
                         align-items: center;
-                        justify-content: space-between;
+                        justify-content: center;
                         column-gap: 8px;
                         padding: 15px 20px;
                         border-radius: 10px;
