--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,9 @@
 ::-webkit-scrollbar-thumb {
     background: #0B6AC9;
     border-radius: 15px;
+    &:hover{
+        background: #1C3955;
+    }
 }
 
 ::selection {
@@ -102,3 +105,43 @@ body{
         }
     }
 }
+
+/*Style dropdown*/
+
+.dropdown{
+    &.open{
+        max-height: 209px !important;
+        overflow-y: auto !important;
+        top: 5px !important;
+        row-gap: 10px !important;
+        border-radius: 10px !important;
+        background: #FFF !important;
+        box-shadow: 0px 2.76726px 2.21381px 0px rgba(0, 0, 0, 0.01), 0px 6.6501px 5.32008px 0px rgba(0, 0, 0, 0.01), 0px 12.52155px 10.01724px 0px rgba(0, 0, 0, 0.01), 0px 22.33631px 17.86905px 0px rgba(0, 0, 0, 0.01), 0px 41.77761px 33.42209px 0px rgba(0, 0, 0, 0.01), 0px 100px 80px 0px rgba(0, 0, 0, 0.02);
+        border: none !important;
+        button{
+            display: flex !important;
+            align-items: start !important;
+            justify-content: start !important;
+            &:hover{
+                background: transparent !important;
+                span{
+                    color: #0B6AC9 !important;
+                }
+            }
+            span{
+                color: #162E47 !important;
+                font-weight: 500 !important;
+                font-family: 'Work Sans', sans-serif !important;
+            }
+        }
+    }
+    &-item.active{
+        background: transparent !important;
+    }
+}
+
+/* Importing Bootstrap SCSS file. */
+@import "./node_modules/bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
